@@ -1,6 +1,7 @@
 ALBUM=The Raven
 ARTIST=Edgar Allen Poe
 DATE=2007
+DURATION=20993741
 
 ENSEMBLE=Edgar Allen Poe
 GENRE=Speech
